--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <style>
-      @import url("https://fonts.googleapis.com/css?family=Manrope:var(--text-sm-medium-font-weight),var(--text-xl-medium-font-weight),var(--display-md-medium-font-weight),var(--display-2xl-medium-font-weight),var(--text-md-medium-font-weight),600,var(--text-lg-medium-font-weight),var(--display-XL-medium-font-weight),var(--text-lg-regular-font-weight),var(--text-xl-semibold-font-weight),var(--text-sm-bold-font-weight),var(--display-sm-medium-font-weight),var(--display-lg-medium-font-weight),500,400,var(--text-lg-bold-font-weight)");
-    </style>
-    <link href="tailwind.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="tailwind.css" rel="stylesheet" />
   </head>
   <body>
